--- a/index.html
+++ b/index.html
@@ -13,60 +13,16 @@
   <link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet">
 
   <style>
+  body {
+    overflow-y: scroll;
+    line-height: 2em;
+    padding-top: 60px;
+  }
    .jumbotron {
     text-align: center;
     background-color: transparent;
   }
-  .jumbotron .btn {
-    font-size: 21px;
-    padding: 14px 24px;
-    background: hsla(66.96, 58.97%, 45.88%, 1.00);
-    border: none;
-    color: white;
-  }
-  body {
-    overflow-y: scroll;
-    line-height: 2em;
-  }
-  .main-content {
-    padding-top: 60px;
-  }
-  .main-content ul {
-    padding: 0;
-    list-style-type: none;
-  }
-  .tab-pane li {
-    padding: 1em;
-    margin: .5em 0;
-  }
 
-  .tab-pane li:nth-of-type(even) {
-    background: #f8f8f8;
-    border-radius: 6px;
-  }
-
-  .tab-pane .label {
-    font-size: 95%;
-    margin-right: 1em;
-  }
-
-  .nav-pills {
-    margin-bottom: 33px;
-  }
-
-  a {
-    font-weight: bold;
-    color: #333;
-  }
-
-  a.list-group-item.active>.badge, .nav-pills>.active>a>.badge {
-    color: #777;
-  }
-
-  h1 {
-    margin-top: 35px;
-    margin-bottom: 30px;
-  }
 
 </style>
 
@@ -89,9 +45,10 @@
       <p><a class="btn btn-lg btn-success" href="#">Show Me How</a></p>
     </div>
 
+    <h1 id="header-container"></h1>
+
     <div class="row">
       <div class="col-lg-3">
-        <h1>Something</h1>
         <div class="panel panel-default">
           <div class="panel-heading">Statistics</div>
           <ul class="list-group" id="list-stats-container"></ul>
@@ -102,7 +59,7 @@
         <ul class="nav nav-pills nav-justified">
           <li class="active">
             <a class="" data-toggle="tab" href="#response">
-              Response
+              Response Issues
               <span class="badge">42</span>
             </a>
           </li>
@@ -117,25 +74,14 @@
               Errors/Warnings<span class="badge">42</span></a>
           </li>
           <li>
-            <a class="" data-toggle="tab" href="#health">
-            Health
-              <span class="badge">42</span>
-            </a>
-          </li>
-          <li>
             <a class="" data-toggle="tab" href="#debug">
-            Debug
+            All URLs
               <span class="badge">42</span>
             </a>
           </li>
         </ul>
 
-        <div class="input-group">
-          <input type="text" class="form-control">
-          <span class="input-group-btn">
-            <button class="btn btn-default" type="button">Go!</button>
-          </span>
-        </div>
+        <hr>
 
         <div class="tab-pane active" id="response">
           <ul id="response-container"></ul>
@@ -160,15 +106,15 @@
 
     <!-- Site footer -->
     <div class="footer">
-      <p>&copy; SurveyMonkey Inc. 2013</p>
+      <p>By: <a href="https://github.com/pensive612/casperjs-spider">CasperJS Spider</a></p>
     </div>
 
   </div> <!-- /container -->
 
-  <script src="scripts/jquery.min.js"></script>
-  <script src="scripts/handlebars.js"></script>
-  <script src="scripts/lodash.min.js"></script>
-  <script src="scripts/sass-bootstrap/js/tab.js"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/1.0.0/handlebars.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/1.3.1/lodash.min.js"></script>
+  <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
 
   <!-- Handlebars Helpers -->
   <script>
@@ -254,6 +200,10 @@
     {{/each}}
   </script>
 
+  <script type="text/x-handlebars-template" id="header-template">
+    {{this.start}}
+  </script>
+
   <script>
 
     (function(window,document,undefined){
@@ -269,7 +219,6 @@
           var insecure = "insecure content";
           return value.msg.indexOf(insecure) !== -1;
         });
-
 
         // apply list stats
         var listStatsTemplate = $("#list-stats-template").html();
@@ -295,14 +244,20 @@
         var debugTemplate = $("#debug-template").html();
         var debug = Handlebars.compile(debugTemplate);
         $('#debug-container').html(debug(data));
+
+        // apply header
+        var headerTemplate = $("#header-template").html();
+        var header = Handlebars.compile(headerTemplate);
+        $('#header-container').html(header(data));
       };
 
       var getJsonPromise = $.getJSON('logs/data.json');
 
       getJsonPromise.then(function(response) {
         dataObj = response;
+        console.log(response);
         return dataObj;
-      })
+      });
 
       getJsonPromise
       .done(function(response) {
