--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="author" content="">
   <link rel="shortcut icon" href="../../assets/ico/favicon.png">
 
-  <title>Justified Nav Template for Bootstrap</title>
+  <title>CasperJS Spider</title>
 
   <!-- Bootstrap core CSS -->
   <link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet">
